# zklm

./: README.md  pyproject.toml  requirements.txt  setup.py
examples/: inference_example.py  medical_diagnosis.py  mnist_federated.py
results/run_20250317_000637/: scaler.pt
results/run_20250317_001648/: metrics.csv  model_architecture.txt  summary.txt
results/run_20250317_010934/: y_test.npy
results/run_20250317_011134/: X_test.npy  scaler_center_.npy  training_history.npy
results/run_20250317_013932/: scaler_scale_.npy
zkml/: __init__.py  federated.py  models.py  mpc.py  zkp.py
zkml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
